--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="/st/main.css">
 <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+<script src="/st/main.js"></script>
 
 <div class="logo_cnt">
     <img src="/st/img/LOGO_NP_RUS_Final.png">
