--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -1,6 +1,7 @@
 <meta charset="utf-8">
 <link rel="stylesheet" href="/st/main.css">
-<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 <script src="/st/main.js"></script>
 
 <div class="logo_cnt">
@@ -14,5 +15,7 @@
         <h1 id="t_min">35</h1>
         <h1>:</h1>
         <h1 id="t_sec">40</h1>
+        <h1>&nbsp-&nbsp</h1>
+        <h1 id="t_event_name">Event start</h1>
     </div>
 </div>
