set timer by time

--- a/templates/master.ejs
+++ b/templates/master.ejs
@@ -5,6 +5,8 @@
 <script src="/st/master.js"></script>
 
 <h1>First National Platform Master Page</h1>
-<input id="time" placeholder="Time in seconds">
-<input id="event" placeholder="Event name">
+<input id="t_hour" placeholder="4">
+<span>:</span>
+<input id="t_min" placeholder="20">
+<input id="t_event" placeholder="Event name">
 <button onclick="SetTimer()">Set timer</button>
