--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -1,4 +1,5 @@
 <meta charset="utf-8">
+<title>National Platform</title>
 <link rel="stylesheet" href="/st/main.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
