--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -12,11 +12,15 @@
 
 
 <div class="timer_cnt">
-    <div>
+    <div class="_mode_timer _mode _hidden">
         <h1 id="t_min">35</h1>
         <h1>:</h1>
         <h1 id="t_sec">40</h1>
         <h1>&nbsp-&nbsp</h1>
         <h1 id="t_event_name">Event start</h1>
+    </div>
+    <div class="_mode_presenter _mode">
+        <h1 id="p_title">QA in Bulgary</h1>
+        <h1 id="p_name">Test Testovich</h1>
     </div>
 </div>
