--- a/public/main.css
+++ b/public/main.css
@@ -13,7 +13,7 @@ body {
 
 div.logo_cnt {
     width: 100%;
-    height: 20vh;
+    height: 37vh;
     text-align: center;
 }
 
@@ -30,6 +30,15 @@ div.timer_cnt {
 div.timer_cnt > div {
     background-color: white;
     font-size: 24pt;
+}
+
+div.timer_cnt > div > h1 {
+    margin: 0;
+    padding-top: 42px;
+}
+
+div.timer_cnt > div > h1:last-of-type {
+    padding-bottom: 42px;
 }
 
 div.timer_cnt > div._mode_timer {
