--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -10,7 +10,7 @@
 </div>
 
 <div class="timer_cnt">
-    <div class="_mode_timer _mode">
+    <div class="_mode_timer _mode _hidden">
         <h1 id="t_min">00</h1>
         <h1>:</h1>
         <h1 id="t_sec">00</h1>
