--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -14,7 +14,7 @@
         <h1 id="t_min">00</h1>
         <h1>:</h1>
         <h1 id="t_sec">00</h1>
-        <h1>&nbsp-&nbsp</h1>
+        <h1>&nbsp;-&nbsp;</h1>
         <h1 id="t_event_name">Event start</h1>
     </div>
     <div class="_mode_presenter _mode _hidden">
