--- a/templates/master.ejs
+++ b/templates/master.ejs
@@ -6,6 +6,10 @@
 <script src="/st/master.js"></script>
 
 <h1>First National Platform Master Page</h1>
+
+<h3>Displays connected:</h3>
+<span id="display-count"></span>
+
 <h2>Toggle mode</h2>
 <input type="radio" name="mode" value="_mode_timer">Timer mode -
 <input type="radio" name="mode" value="_mode_presenter">Presenter mode -
