add displays count; fix sudden errors

--- a/templates/master.ejs
+++ b/templates/master.ejs
@@ -7,7 +7,7 @@
 
 <h1>First National Platform Master Page</h1>
 
-<h3>Displays connected:</h3>
+<h3 style="display: inline;">Displays connected:</h3>
 <span id="display-count"></span>
 
 <h2>Toggle mode</h2>
