add sync between master

--- a/templates/master.ejs
+++ b/templates/master.ejs
@@ -20,13 +20,13 @@
 
     <h2>Toggle mode</h2>
     <div class="btn-group" data-toggle="buttons">
-        <label class="btn btn-secondary active">
+        <label class="mode_label btn btn-secondary">
             <input type="radio" name="mode" id="_mode_timer" autocomplete="off">Timer
         </label>
-        <label class="btn btn-secondary">
+        <label class="mode_label btn btn-secondary">
             <input type="radio" name="mode" id="_mode_presenter" autocomplete="off">Presenter
         </label>
-        <label class="btn btn-secondary">
+        <label class="mode_label btn btn-secondary active">
             <input type="radio" name="mode" id="_mode_question" autocomplete="off" checked>Logo
         </label>
     </div>
