--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -1,24 +1,37 @@
 <meta charset="utf-8">
 <title>National Platform</title>
+<link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous"/>
 <link rel="stylesheet" href="/st/main.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 <script src="/st/main.js"></script>
 
-<div class="logo_cnt">
-    <img src="/st/img/LOGO_NP_RUS_Final-compressed.png">
-</div>
-
-<div class="timer_cnt">
-    <div class="_mode_timer _mode _hidden">
-        <h1 id="t_min">00</h1>
-        <h1>:</h1>
-        <h1 id="t_sec">00</h1>
-        <h1>&nbsp;-&nbsp;</h1>
-        <h1 id="t_event_name">Event start</h1>
+<body class="pure-g">
+    <div id="background_container"></div>
+    <div class="pure-u-2-5">
+        <div id="tree_cnt"></div>
     </div>
-    <div class="_mode_presenter _mode _hidden">
+    <div class="pure-u-3-5">
+        <div id="title_cnt">
+            <h1>National Platform</h1>
+            <h2>Autumn&grave;17 Moscow</h2>
+            <h3>10 - 12 November</h3>
+        </div>
+        <div id="timer_cnt" class="_hidden">
+            <div>
+                <h1 id="t_min">00</h1>
+                <h1>:</h1>
+                <h1 id="t_sec">00</h1>
+                <h1>&nbsp;-&nbsp;</h1>
+                <h1 id="t_event_name">Event start</h1>
+            </div>
+        </div>
+        <div id="logo_cnt">
+            <img src="/st/img/esn_russia_logo.png">
+        </div>
+    </div>
+    <div id="presenter_cnt" class="_hidden">
         <h1 id="p_title"></h1>
         <h1 id="p_name"></h1>
     </div>
-</div>
+</body>
