--- a/templates/master.ejs
+++ b/templates/master.ejs
@@ -29,6 +29,9 @@
         <label class="mode_label btn btn-secondary active">
             <input type="radio" name="mode" id="_mode_question" autocomplete="off" checked>Logo
         </label>
+        <label class="mode_label btn btn-secondary">
+            <input type="radio" name="mode" id="_mode_hide_all" autocomplete="off">Hide All
+        </label>
     </div>
 
     <hr>
