--- a/public/main.css
+++ b/public/main.css
@@ -28,7 +28,8 @@
     transition: all 1s ease-in-out;
 }
 
-html,body {
+html,
+body {
     background-color: rgba(0, 0, 0, 0);
 }
 
@@ -40,8 +41,6 @@ body {
     height: 100vh;
     overflow: hidden;
 }
-
-
 
 #background_container {
     position: absolute;
@@ -58,8 +57,6 @@ body {
     opacity: 0;
 }
 
-
-
 #tree_cnt {
     height: 100vh;
     background-image: url(/st/img/esn_tree.png);
@@ -74,8 +71,6 @@ body {
     opacity: 0;
 }
 
-
-
 #title_cnt {
     width: 100%;
     text-align: center;
@@ -87,7 +82,9 @@ body {
     top: -60vh;
 }
 
-#title_cnt > h1,h2,h3 {
+#title_cnt > h1,
+h2,
+h3 {
     margin: 0;
     margin-bottom: 0.1em;
     font-family: Kelson Sans Regular;
@@ -104,7 +101,6 @@ body {
 #title_cnt > h3 {
     font-size: 3.5vw; /*3em;*/
 }
-
 
 /* SMalled */
 #title_cnt._smalled {
@@ -124,7 +120,6 @@ body {
 }
 /* --------*/
 
-
 #timer_cnt {
     opacity: 1;
     position: relative;
@@ -133,7 +128,7 @@ body {
     text-align: center;
 }
 
-#timer_cnt> div > h1 {
+#timer_cnt > div > h1 {
     margin: 0;
     font-size: 6vw;
     display: inline;
@@ -158,7 +153,6 @@ body {
 #timer_cnt._hidden {
     opacity: 0;
 }
-
 
 /* LOGO CONTAINER */
 
@@ -187,7 +181,6 @@ body {
     width: 60%;
 }
 
-
 #presenter_cnt {
     position: absolute;
     bottom: 0;
@@ -197,7 +190,7 @@ body {
 
     background-color: transparent;
     background-size: cover;
-    text-align: right;/*
+    text-align: right; /*
     box-shadow: 0 0 10px rgba(0,0,0,0.5); */
     background-image: url(/st/img/presenter-bg.png);
     font-size: 2vh;
