--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -8,27 +8,27 @@
 
 <body class="pure-g">
     <div id="background_container"></div>
-    <div class="pure-u-2-5">
-        <div id="tree_cnt"></div>
-    </div>
-    <div class="pure-u-3-5">
+    <div id="top_cnt">
+        <div id="bridge_cnt">
+            <img src="/st/img/esn_bridge.png" />
+        </div>
         <div id="title_cnt">
             <h1>National Platform</h1>
-            <h2>Autumn&grave;17 Moscow</h2>
-            <h3>10 - 12 November</h3>
+            <h1>St Petersburg</h1>
+            <h3>2th - 4th March</h3>
         </div>
-        <div id="timer_cnt" class="_hidden">
-            <div>
-                <h1 id="t_min">00</h1>
-                <h1>:</h1>
-                <h1 id="t_sec">00</h1>
-                <h1>&nbsp;-&nbsp;</h1>
-                <h1 id="t_event_name">Event start</h1>
-            </div>
+    </div>
+    <div id="timer_cnt" class="_hidden">
+        <div>
+            <h1 id="t_min">00</h1>
+            <h1>:</h1>
+            <h1 id="t_sec">00</h1>
+            <h1>&nbsp;-&nbsp;</h1>
+            <h1 id="t_event_name">Event start</h1>
         </div>
-        <div id="logo_cnt">
-            <img src="/st/img/esn_russia_logo.png">
-        </div>
+    </div>
+    <div id="logo_cnt">
+        <img src="/st/img/esn_russia_logo.png">
     </div>
     <div id="presenter_cnt" class="_hidden">
         <h1 id="p_title"></h1>
