--- a/public/main.css
+++ b/public/main.css
@@ -177,19 +177,19 @@ body {
     bottom: 0;
     right: 0;
     padding-right: 1vw;
-    padding-left: 10vw;
+    padding-left: calc(10vw + 50px);
 
     background-color: transparent;
     background-size: cover;
-    text-align: right; /*
-    box-shadow: 0 0 10px rgba(0,0,0,0.5); */
+    text-align: right;
     background-image: url(/st/img/presenter-bg.png);
     font-size: 2vh;
     height: 15vh;
 }
 
 #presenter_cnt > h1 {
-    font-family: Rubik Bold;
+    font-family: Rubik Medium;
+    color: black;
     margin: 1vh 0;
     letter-spacing: 0;
 }
@@ -201,14 +201,6 @@ body {
 #presenter_cnt > h1#p_name {
     font-family: Rubik Light;
 }
-
-/*#presenter_cnt::before {
-    content: url(/st/img/presenter-border-corner.png);
-    background-color: transparent!important;
-    position: absolute;
-    display: inline-block;
-    left: -18.7vw;
-} */
 
 #presenter_cnt._hidden {
     bottom: -30vh;
