update graphics for NP July 18

--- a/public/main.css
+++ b/public/main.css
@@ -48,7 +48,7 @@ body {
     width: 100vw;
     height: 100vh;
 
-    background-image: url(/st/img/background_empty.png);
+    background-image: url(/st/img/background_empty.jpg);
     background-size: cover;
     background-position: center;
     opacity: 1;
