--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -10,12 +10,12 @@
     <div id="background_container"></div>
     <div id="top_cnt">
         <div id="bridge_cnt">
-            <img src="/st/img/esn_bridge.png" />
+            <img src="/st/img/logo_np_c.png" />
         </div>
         <div id="title_cnt">
             <h1>National Platform</h1>
-            <h1>St Petersburg</h1>
-            <h3>2th - 4th March</h3>
+            <h1>Moscow</h1>
+            <h3>27th - 29th July</h3>
         </div>
     </div>
     <div id="timer_cnt" class="_hidden">
