--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -8,27 +8,29 @@
 
 <body class="pure-g">
     <div id="background_container"></div>
-    <div id="top_cnt">
-        <div id="bridge_cnt">
-            <img src="/st/img/logo_np_c.png" />
-        </div>
-        <div id="title_cnt">
-            <h1>National Platform</h1>
-            <h1>Moscow</h1>
-            <h3>27th - 29th July</h3>
-        </div>
+    <div id="bridge_cnt">
+        <img src="/st/img/logo_np_c.png" />
     </div>
-    <div id="timer_cnt" class="_hidden">
-        <div>
-            <h1 id="t_min">00</h1>
-            <h1>:</h1>
-            <h1 id="t_sec">00</h1>
-            <h1>&nbsp;-&nbsp;</h1>
-            <h1 id="t_event_name">Event start</h1>
+    <div id="right_block">
+        <div id="top_cnt">
+            <div id="title_cnt">
+                <h1>National Platform</h1>
+                <h1>Moscow</h1>
+                <h3>27th - 29th July</h3>
+            </div>
         </div>
-    </div>
-    <div id="logo_cnt">
-        <img src="/st/img/esn_russia_logo.png">
+        <div id="timer_cnt" class="_hidden">
+            <div>
+                <h1 id="t_min">00</h1>
+                <h1>:</h1>
+                <h1 id="t_sec">00</h1>
+                <h1>&nbsp;-&nbsp;</h1>
+                <h1 id="t_event_name">Event start</h1>
+            </div>
+        </div>
+        <div id="logo_cnt">
+            <img src="/st/img/esn_russia_logo.png">
+        </div>
     </div>
     <div id="presenter_cnt" class="_hidden">
         <h1 id="p_title"></h1>
