--- a/public/main.css
+++ b/public/main.css
@@ -41,6 +41,9 @@ body {
     height: 100vh;
     overflow: hidden;
     letter-spacing: normal !important;
+
+    display: flex;
+    justify-content: space-between;
 }
 
 #background_container {
@@ -52,40 +55,50 @@ body {
     background-size: cover;
     background-position: center;
     opacity: 1;
+    z-index: -1;
 }
 
 #background_container._hidden {
     opacity: 0;
 }
 
-#top_cnt {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-    padding: 0 10vw;
-
-    width: 100%;
-    position: relative;
-    top: 5vh;
-    opacity: 1;
-}
-
-#top_cnt._hidden {
-    top: -60vh;
-}
-
 #bridge_cnt {
-    height: 30vw;
+    height: 100vh;
+    width: 30vw;
+    text-align: center;
 }
 
 #bridge_cnt > img {
     height: 100%;
+    max-width: 100%;
+    opacity: 1;
 }
+
+#bridge_cnt._hidden > img {
+    opacity: 0;
+}
+
+#right_block {
+    height: 100vh;
+    width: 70vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+#top_cnt {
+    opacity: 1;
+    text-align: center;
+    /* padding-left: 2vw; */
+}
+
+/* #top_cnt._hidden {
+    top: -60vh;
+} */
 
 #title_cnt > h1 {
     font-size: 5.5vw; /*5.5em*/
-    padding: 0 0 3.2vh 1vh;
+    padding: 0 0 1vh 1vh;
     margin: 0;
     font-family: Rubik Bold;
 }
@@ -93,31 +106,25 @@ body {
 #title_cnt > h3 {
     font-size: 2.2vw; /*3em;*/
     margin: 0;
-    padding: 5.2vh 0 0 1vh;
+    padding: 2vh 0 0 1vh;
     font-family: Rubik Bold;
 }
 
 /* Smalled */
-#top_cnt._smalled > #bridge_cnt {
-    height: 20vw;
-}
-
 #top_cnt._smalled > #title_cnt > h1 {
     font-size: 5.4vw;
-    padding: 0 0 1vh 1vh;
 }
 
 #top_cnt._smalled > #title_cnt > h3 {
     font-size: 2.2vw;
-    padding: 2vh 0 0 1vh;
 }
 
 /* -------- */
 
 #timer_cnt {
     opacity: 1;
-    position: relative;
-    top: 15vh;
+    /* position: relative; */
+    /* top: 15vh; */
     width: 100%;
     text-align: center;
 }
@@ -129,32 +136,18 @@ body {
     font-family: Rubik Bold;
 }
 
-/*#timer_cnt > div {
-    font-size: 3em;
-    display: flex;
-    justify-content: center;
-}
-
-#timer_cnt > div > h1 {
-    margin: 0;
-    padding-top: 42px;
-}
-
-#timer_cnt > div > h1:last-of-type {
-    padding-bottom: 42px;
-}*/
-
 #timer_cnt._hidden {
     opacity: 0;
+    height: 0;
 }
 
 /* LOGO CONTAINER */
 
 #logo_cnt {
-    width: 100vw;
+    width: 100%;
     height: 15vh;
-    position: absolute;
-    bottom: 5vh;
+    /* position: absolute; */
+    /* bottom: 5vh; */
     text-align: center;
     opacity: 1;
 }
