--- a/public/main.css
+++ b/public/main.css
@@ -89,12 +89,11 @@ body {
 #top_cnt {
     opacity: 1;
     text-align: center;
-    /* padding-left: 2vw; */
 }
 
-/* #top_cnt._hidden {
-    top: -60vh;
-} */
+#top_cnt._hidden {
+    opacity: 0;
+}
 
 #title_cnt > h1 {
     font-size: 5.5vw; /*5.5em*/
@@ -146,8 +145,6 @@ body {
 #logo_cnt {
     width: 100%;
     height: 15vh;
-    /* position: absolute; */
-    /* bottom: 5vh; */
     text-align: center;
     opacity: 1;
 }
