--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="/st/main.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
+<script src="https://momentjs.com/downloads/moment.js"></script>
 <script src="/st/main.js"></script>
 
 <body class="pure-g">
