fix timer, compress images

--- a/templates/master.ejs
+++ b/templates/master.ejs
@@ -38,9 +38,10 @@
     <hr>
 
     <h2>Set timer</h2>
+    <i id="timer_label"></i>
     <div class='form-inline'>
         <input id="t_event" placeholder="Event name" class="form-control mb-2 mr-sm-2 mb-sm-0">
-        <span>will happen in&nbsp;</span>
+        <span>in&nbsp;</span>
         <input id="t_delay" class="form-control mb-2 mr-sm-2 mb-sm-0">
         <span>minutes&nbsp;&nbsp;</span>
         <button onclick="SetTimer()" class="btn btn-primary">Set timer</button>
