--- a/templates/main.ejs
+++ b/templates/main.ejs
@@ -22,11 +22,9 @@
         </div>
         <div id="timer_cnt" class="_hidden">
             <div>
-                <h1 id="t_min">00</h1>
-                <h1>:</h1>
-                <h1 id="t_sec">00</h1>
-                <h1>&nbsp;-&nbsp;</h1>
-                <h1 id="t_event_name">Event start</h1>
+                <h1 id="t_event_name">Coffee break ends</h1>
+                <h1>&nbsp;</h1>
+                <h1 id="t_timer">right now</h1>
             </div>
         </div>
         <div id="logo_cnt">
