fix errors, add link to desktop app

--- a/templates/master.ejs
+++ b/templates/master.ejs
@@ -18,6 +18,8 @@
     <p style="display: inline;" id="display-count"></p>
 
     <hr>
+    <a href="/st/esn-screensaver-jul18.exe">Download desktop app</a>
+    <hr>
 
     <h2>Toggle mode</h2>
     <div class="btn-group" data-toggle="buttons">
